--- a/prjct_resource.qrc
+++ b/prjct_resource.qrc
@@ -16,5 +16,6 @@
         <file>profilePictures/unicorn.png</file>
         <file>profilePictures/varun.jpg</file>
         <file>sounds/029_Decline_09.wav</file>
+        <file>sounds/8Bit Platformer Loop.wav</file>
     </qresource>
 </RCC>
