--- a/prjct_resource.qrc
+++ b/prjct_resource.qrc
@@ -18,5 +18,7 @@
         <file>sounds/029_Decline_09.wav</file>
         <file>sounds/8Bit Platformer Loop.wav</file>
         <file>users.json</file>
+        <file>images/755t.gif</file>
+        <file>images/Up8y.gif</file>
     </qresource>
 </RCC>
